# docker_demo

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml  setup.cfg
src/: main.py
